--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,6 @@
 {
     "python.pythonPath": "C:\\Users\\Vince\\Anaconda3\\python.exe",
-    "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
     "python.linting.flake8Enabled": true,
-    "python.linting.banditEnabled": false,
-    "python.linting.prospectorEnabled": false,
-    "python.linting.pylamaEnabled": false
+    "python.formatting.provider": "autopep8",
 }
